deployment/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bank-app
  name: bank-app
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: bank-app
  template:
    metadata:
      labels:
        app: bank-app
    spec:
      containers:
        - name: bank-app
          image: codeberg.org/marcusjy/bank-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          resources: # TODO adjust these down when we have a better feel for the app's needs
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: "1"
              memory: 1000Mi
      restartPolicy: Always
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
