deployment/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bank-app
  name: bank-app
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: bank-app
