deployment/manifests/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: bank-app
  name: bank-app
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - modernfi.yanello.net
  rules:
    - backendRefs:
        - name: bank-app
          port: 8080
